objects/LAT_BR_TrafficLight__c.object
<CustomObject>
    <fields>
        <fullName>LAT_BR_RegionalPlusManager__c</fullName>
        <formula>LAT_BR_TL_Region__c + &apos; - &apos; +  LAT_BR_TL_Channel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional + Tipo Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_AreaManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LAT_BR_TrafficLightAreaManagers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_CamposPreenchidos__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count Campos Preenchidos</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_Channel__c</fullName>
        <label>Client Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_CountActiveClients__c</fullName>
        <label>Count Active Clients</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_CountContactos__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantidade Contactos cadastrados</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_CountPlanejamento__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantidade Planejamento</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_CountVisitasAcordo__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantidade visitas Acordo</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_CountVisitasAtt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantidade visitas com anexo</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_CountVisitasEncerradas__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantidade visitas encerradas</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_CountVisitasMes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantidade de visitas no mês atual</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_CountVisitasNRealizada__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantidade visitas Nao Realizadas</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_CountVisitasPRealizada__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantidade visitas Par. Realizadas</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_CountVisitasTRealizada__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantidade visitas Tot. Realizadas</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_CountVisitas__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count Visitas</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_FilterDate__c</fullName>
        <label>Data de filtragem</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_ModifiedDate__c</fullName>
        <label>ModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_PercentCamposPreenchidos__c</fullName>
        <formula>if(LAT_BR_TL_TotalCampos__c == 0, 0 ,LAT_BR_TL_CamposPreenchidos__c / LAT_BR_TL_TotalCampos__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Campos Preenchidos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_PercentContactosCadastrados__c</fullName>
        <formula>if(LAT_BR_TL_CountActiveClients__c == 0, 0 , LAT_BR_TL_CountContactos__c / (LAT_BR_TL_CountActiveClients__c * 2))</formula>
        <label>% Contactos Cadastrados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_PercentLogins__c</fullName>
        <label>% Logins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_PercentMedia__c</fullName>
        <formula>if((((LAT_BR_TL_PercentCamposPreenchidos__c * 1) + (LAT_BR_TL_PercentPlanejamento__c * 2) 
+ (LAT_BR_TL_PercentVisitasEncerradas__c * 3) + (LAT_BR_TL_PercentVisitasAtt__c * 2) + (LAT_BR_TL_PercentLogins__c * 1) + (LAT_BR_TL_PercentContactosCadastrados__c * 1)) /9) &gt;1, 1, (((LAT_BR_TL_PercentCamposPreenchidos__c * 1) + (LAT_BR_TL_PercentPlanejamento__c * 2) 
+ (LAT_BR_TL_PercentVisitasEncerradas__c * 3) + (LAT_BR_TL_PercentVisitasAtt__c * 2) + (LAT_BR_TL_PercentLogins__c * 1) + (LAT_BR_TL_PercentContactosCadastrados__c * 1)) /9) )</formula>
        <label>Media Traffic Light</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_PercentPlanejamento__c</fullName>
        <formula>if(LAT_BR_TL_CountActiveClients__c == 0, 0 , LAT_BR_TL_CountPlanejamento__c / LAT_BR_TL_CountActiveClients__c)</formula>
        <label>% Planejamento por cliente</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_PercentVisitasAcordo__c</fullName>
        <formula>if(LAT_BR_TL_CountVisitasMes__c == 0, 0, LAT_BR_TL_CountVisitasAcordo__c / LAT_BR_TL_CountVisitasMes__c)</formula>
        <label>% Visitas Acordo Realizado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_PercentVisitasAtt__c</fullName>
        <formula>if(LAT_BR_TL_CountVisitasMes__c == 0 , 0 , LAT_BR_TL_CountVisitasAtt__c / LAT_BR_TL_CountVisitasMes__c)</formula>
        <label>% Visitas Anexo (TAA)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_PercentVisitasEncerradas__c</fullName>
        <formula>if(LAT_BR_TL_CountVisitasMes__c == 0,0, LAT_BR_TL_CountVisitasEncerradas__c / LAT_BR_TL_CountVisitasMes__c)</formula>
        <label>% Visitas Encerradas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_PercentVisitasNRealizada__c</fullName>
        <formula>if(LAT_BR_TL_CountVisitasMes__c == 0, 0, LAT_BR_TL_CountVisitasNRealizada__c / LAT_BR_TL_CountVisitasMes__c)</formula>
        <label>% Visitas Não Realizadas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_PercentVisitasPRealizada__c</fullName>
        <formula>if(LAT_BR_TL_CountVisitasMes__c == 0, 0 ,LAT_BR_TL_CountVisitasPRealizada__c / LAT_BR_TL_CountVisitasMes__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Visitas Objetivo Par. Alcançado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_PercentVisitasTRealizada__c</fullName>
        <formula>if(LAT_BR_TL_CountVisitasMes__c == 0, 0, LAT_BR_TL_CountVisitasTRealizada__c / LAT_BR_TL_CountVisitasMes__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Visitas Objetivo Totalmente Alc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_RegionalManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LAT_BR_TrafficLightRegionalManagers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_SalesExecutive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LAT_BR_TrafficLightExecutives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_TotalCampos__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count Total Campos</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_VacationsMonth__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vacations Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_BR_TL_Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>LAT_BR_TrafficLight</label>
    <nameField>
        <displayFormat>TL-{0000}</displayFormat>
        <label>LAT_BR_Trafic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAT_BR_TrafficLights</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>